Prevent horizontal scrolling on website
- Set body width to 100vw to ensure full viewport width
- Hide overflow-x to disable horizontal scrolling

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,6 +1,7 @@
 @import 'reset.css';
 body{
     width: 100vw;
+    overflow-x: hidden;
     background-color:rgb(40, 39, 39);
 }
 
